reactproductstoken.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mytest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactbookfront
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactbookfront
  template:
    metadata:
      labels:
        app: reactbookfront
    spec:
      containers:
      - name: reactbookfront
        image: superheatedboy/reactbookfront:latest
        imagePullPolicy: IfNotPresent
        tty: true
        ports:
        - containerPort: 3000
        #command: ["npm", "run", "start-client"]
---
apiVersion: v1
kind: Service
metadata:
  name: reactbookfront
  namespace: default
spec:
  type: NodePort
  selector:
    app: reactbookfront
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
      name: reactbookfront
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsapi
  template:
    metadata:
      labels:
        app: productsapi
    spec:
      containers:
      - name: productsapi
        image: superheatedboy/productsapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: productsapi
  namespace: default
spec:
  type: NodePort
  selector:
    app: productsapi
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
      protocol: TCP
      name: productsapi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokenapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokenapi
  template:
    metadata:
      labels:
        app: tokenapi
    spec:
      containers:
      - name: tokenapi
        image: superheatedboy/tokenapi:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: tokenapi
  namespace: default
spec:
  type: NodePort
  selector:
    app: tokenapi
  ports:
    - port: 3002
      targetPort: 3002
      nodePort: 30002
      protocol: TCP
      name: tokenapi



---

#cat <<EOF | kubectl apply -f -
apiVersion: v1
kind: Pod
metadata:
  name: busybox-sleep
  namespace: default
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000000"
#EOF
